Added html inputs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <title>XXX</title>
 </head>
 <body>
-    
+    <label for="parola-utente">Pick your word: </label>
+    <input type="text" id="parola-utente" >
+    <button type="button" class="me-3 btn btn-secondary" id="create">Genera</button> 
+    <span id="palindrome-result"></span>
     <!-- <script src="js/script.js"></script> -->
     <script src="js/tpircs.js"></script>
 </body>
